#
#
#  Copyright 2013 Netflix, Inc.
#
#     Licensed under the Apache License, Version 2.0 (the "License");
#     you may not use this file except in compliance with the License.
#     You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
#     Unless required by applicable law or agreed to in writing, software
#     distributed under the License is distributed on an "AS IS" BASIS,
#     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#     See the License for the specific language governing permissions and
#     limitations under the License.
#
#

[metadata]
name = aminator
description-file = README.rst
author = Netflix Engineering Tools
author_email = talent@netflix.com
url = https://github.com/netflix/aminator
packages = find_packages(exclude=exclude_packages)
package_data = package_data
package_dir = {'aminator': 'aminator'}
include_package_data = True
zip_safe = False
install_requires = requires
entry_points = entry_points
license = ASL 2.0
classifiers=
    'Development Status :: 4 - Beta
    'Environment :: Console
    'Intended Audience :: Developers
    'Intended Audience :: Information Technology
    'Intended Audience :: System Administrators
    'License :: OSI Approved :: Apache Software License
    'Natural Language :: English
    'Programming Language :: Python :: 2.6
    'Programming Language :: Python :: 2.7
    'Topic :: System :: Installation/Setup
    'Topic :: Utilities


[files]
packages =
    aminator

[entry_points]
console_scripts =
    aminate = aminator.cli:run
    aminator-plugin = aminator.cli:plugin_manager

aminator.plugins.cloud =
    ec2 = aminator.plugins.cloud.ec2:EC2CloudPlugin

aminator.plugins.distro =
    debian = aminator.plugins.distro.debian:DebianDistroPlugin
    redhat = aminator.plugins.distro.redhat:RedHatDistroPlugin

aminator.plugins.provisioner =
    yum = aminator.plugins.provisioner.yum:YumProvisionerPlugin
    apt = aminator.plugins.provisioner.apt:AptProvisionerPlugin
    aptitude = aminator.plugins.provisioner.aptitude:AptitudeProvisionerPlugin

aminator.plugins.volume =
    linux = aminator.plugins.volume.linux:LinuxVolumePlugin

aminator.plugins.blockdevice =
    linux = aminator.plugins.blockdevice.linux:LinuxBlockDevicePlugin
    null = aminator.plugins.blockdevice.null:NullBlockDevicePlugin

aminator.plugins.finalizer =
    tagging_ebs = aminator.plugins.finalizer.tagging_ebs:TaggingEBSFinalizerPlugin
    tagging_s3 = aminator.plugins.finalizer.tagging_s3:TaggingS3FinalizerPlugin

aminator.plugins.metrics =
    logger = aminator.plugins.metrics.logger:LoggerMetricsPlugin

[bdist_rpm]
requires = python-boto >= 2.7 python-bunch python-decorator python-logutils python-pyyaml python-requests python-stevedore python-simplejson

[flake8]
ignore = E501, E731
